Fix for the New Sidebar's Layout Stretch
# **Fix for the New Sidebar's Layout Stretch** ✍🏻🧰🔩⚡✅

- Updated the stretch for the new New Sidebar's Layout Version
- Updated the version Information

--- a/whatsapp-dark.user.css
+++ b/whatsapp-dark.user.css
@@ -1,13 +1,13 @@
 /* ==UserStyle==
 @name        WhatsApp Dark Contrasted
 @namespace   SpartanJ-5jubs
-@version     1.0.9.6
+@version     1.0.9.7
 @homepageURL https://github.com/5jubsPRO/WhatsApp-Dark
 @updateURL   https://raw.githubusercontent.com/5jubsPRO/WhatsApp-Dark/master/whatsapp-dark.user.css
 @license     CC0 - Public Domain
 @author      SpartanJ-5jubs
 ==/UserStyle== */
-/*! WhatsApp Dark v1.0.9.6 (2024-12-16) */
+/*! WhatsApp Dark v1.0.9.7 (2025-03-21) */
 /*! Repository: https://github.com/5jubsPRO/WhatsApp-Dark    */
 /*! License:    https://creativecommons.org/share-your-work/public-domain/cc0/ */
 @-moz-document domain("web.whatsapp.com") {
@@ -2322,7 +2322,8 @@
 	
 	@media screen and (min-width: 1300px) {
 		.two ._aigw,
-		.two ._aigw:not(._as6h) {
+		.two ._aigw:not(._as6h),
+        .two ._aigw:not(._as6h):not(._asu3) {
 			flex: 0 0 18%;
 			max-width: 30%;
 		}
